--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-lottie": "^1.2.10",
+    "apisauce": "^3.1.0",
+    "axios": "^1.7.7",
+    "lottie-react": "^2.4.0",
     "next": "14.2.2",
+    "next-video": "^1.1.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-lottie": "^1.2.4",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.1",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
