--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-lottie": "^1.2.10",
     "apisauce": "^3.1.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.11",
+    "link-preview-js": "^3.0.12",
     "lottie-react": "^2.4.0",
     "next": "14.2.2",
     "next-video": "^1.1.4",
