--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-lottie": "^1.2.10",
     "apisauce": "^3.1.0",
     "axios": "^1.7.7",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.11.11",
     "link-preview-js": "^3.0.12",
     "lottie-react": "^2.4.0",
@@ -21,6 +22,7 @@
     "next-video": "^1.1.4",
     "nookies": "^2.5.2",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-lottie": "^1.2.4",
     "react-player": "^2.16.0",
