--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-player": "^2.16.0",
     "react-redux": "^9.1.1",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "video.js": "^8.23.3",
+    "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.5",
