--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-lottie": "^1.2.4",
+    "react-paystack": "^6.0.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.1",
     "react-toastify": "^10.0.5",
