--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_BASE_URL="https://api.reeplay.app/api/v1"
 
 NEXT_PUBLIC_BASE_URL_TS_PROD='https://typescript.reeplay.app/api/v1'
+
+NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY='pk_live_703a54d5abf71038883b5a3cd7142c0416a09e47'
