fix:added paystack to create-live, adjust code for create client - superadmin

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_BASE_URL="https://api.reeplay.app/api/v1"
 NEXT_PUBLIC_BASE_URL_TS_PROD='https://typescript.reeplay.app/api/v1'
 
 NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY='pk_live_703a54d5abf71038883b5a3cd7142c0416a09e47'
+NEXT_PUBLIC_PAYSTACK_TEST_PUBLIC_KEY=pk_test_dfc58043407ca1dd857ee499d683b511f4c39eaf
