UI for general tab

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_BASE_URL="https://api.reeplay.app/api/v1"
+NEXT_PUBLIC_RP_baseurl="http://localhost:8000/api/v1"
+
 
 NEXT_PUBLIC_BASE_URL_TS_PROD='https://typescript.reeplay.app/api/v1'
 
