--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vercel": "^37.14.0"
+  },
+  "engines" : {
+    "node": "22.x"
   }
 }
