fix:added flutterwave gateway to client dashboard

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ NEXT_PUBLIC_BASE_URL_TS_PROD='https://typescript.reeplay.app/api/v1'
 
 NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY='pk_live_e06760339cee8d43e98b798b549a697edb456495'
 NEXT_PUBLIC_PAYSTACK_TEST_PUBLIC_KEY=pk_test_479e1f485175c1113f4a2480fa50eb325315d197
+
+# NEXT_PUBLIC_FLUTTERWAVE_LIVE_PUBLIC_KEY='pk_live_e06760339cee8d43e98b798b549a697edb456495'
+NEXT_PUBLIC_FLUTTERWAVE_TEST_PUBLIC_KEY='FLWPUBK_TEST-fc01923ad1b7fdb825ac77d0159b9eed-X'
